--- a/layouts/post/content-single.html
+++ b/layouts/post/content-single.html
@@ -23,7 +23,7 @@
 {{ if ne .Site.DisqusShortname "" }}
     {{ if not (in (printf "%#v" .Site.BaseURL) "localhost") }}
         <article class="post">
-            {{ template "_internal/disqus.html" . }}
+            {{ partial "disqus.html" . }}
         </article>
     {{ end }}
 {{ end }}
