--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,6 +6,8 @@
 -->
 <html>
     <head>
+        <meta HTTP-EQUIV="Pragma" CONTENT="no-cache" />
+        <meta HTTP-EQUIV="Expires" CONTENT="-1" />
         {{ with $.Scratch.Get "generalTitle" }}
             <title>{{ . }}</title>
         {{ else }}
