--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,6 +8,7 @@
     <head>
         <meta HTTP-EQUIV="Pragma" CONTENT="no-cache" />
         <meta HTTP-EQUIV="Expires" CONTENT="-1" />
+        <meta HTTP-EQUIV="last-modified" CONTENT="{{ .Now.Local }}" />
         {{ with $.Scratch.Get "generalTitle" }}
             <title>{{ . }}</title>
         {{ else }}
