--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
     <head>
         <meta HTTP-EQUIV="Pragma" CONTENT="no-cache" />
         <meta HTTP-EQUIV="Expires" CONTENT="-1" />
-        <meta HTTP-EQUIV="last-modified" CONTENT="{{ .Now.Local }}" />
+        <meta HTTP-EQUIV="last-modified" CONTENT="{{ (time .Now).Format "2006-01-02@15:04:05 MST" }}" />
         {{ with $.Scratch.Get "generalTitle" }}
             <title>{{ . }}</title>
         {{ else }}
