--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,9 +6,9 @@
 -->
 <html>
     <head>
-        <meta HTTP-EQUIV="Pragma" CONTENT="no-cache" />
-        <meta HTTP-EQUIV="Expires" CONTENT="-1" />
-        <meta HTTP-EQUIV="last-modified" CONTENT="{{ (time .Now).Format "2006-01-02@15:04:05 MST" }}" />
+        <meta http-equiv="pragma" content="no-cache" />
+        <meta http-equiv="expires" content="0" />
+        <meta http-equiv="last-modified" content="{{ (time .Now).Format "2006-01-02@15:04:05 MST" }}" />
         {{ with $.Scratch.Get "generalTitle" }}
             <title>{{ . }}</title>
         {{ else }}
