Add ~ to img-path

--- a/layouts/partials/img-path.html
+++ b/layouts/partials/img-path.html
@@ -26,6 +26,8 @@
     {{ else }}
         {{ $.Scratch.Add "path" (.Date.Format "2006/01") }}
     {{ end }}
+{{ else if eq $path "~" }}
+  {{ $.Scratch.Set "path" .RelPermalink }}
 {{ else }}
     {{ $.Scratch.Set "path" $path }}
 {{ end }}
