--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -8,7 +8,7 @@
     <head>
         <meta http-equiv="pragma" content="no-cache" />
         <meta http-equiv="expires" content="0" />
-        <meta http-equiv="last-modified" content="{{ (time .Now).Format "2006-01-02@15:04:05 MST" }}" />
+        <meta http-equiv="last-modified" content="{{ now.Format "2006-01-02@15:04:05 MST" }}" />
         {{ with $.Scratch.Get "generalTitle" }}
             <title>{{ . }}</title>
         {{ else }}
